# tcpip_abstraction

./: CMakeCache.txt  CMakeLists.txt  LICENSE  Makefile  README.md  build.sh  client.out  cmake_install.cmake  main.cpp  qtcsettings.cmake  server.out  tcpip_abstraction  tcpip_abstraction.cbp  tcpip_abstraction.sln  tcpip_abstraction.vcxproj  tcpip_abstraction.vcxproj.filters  tcpip_example.out  test.c
Debug/: tcpip_abstraction.ilk
Debug/tcpip_ab.2A818CA2.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  tcpip_abstraction.lastbuildstate
client/: client.cpp
include/: itcpip.h  tcpip.h
server/: server.cpp
src/: tcpip.cpp
